--- a/root/.env
+++ b/root/.env
@@ -1,6 +1,6 @@
-DB_HOST=localhost
-DB_USER=root
-DB_PASSWORD=root
-DB_NAME=to_do_list
+DB_HOST=btblsyyv05rkeq91pxei-mysql.services.clever-cloud.com
+DB_USER=uszmpoqxhpgi3zh3
+DB_PASSWORD=EVS4HILfKTOcPzGNhGas
+DB_NAME=btblsyyv05rkeq91pxei
 
 SECRET_KEY = senhasupermegasecreta
